--- a/optielectronic_sensor.ioc
+++ b/optielectronic_sensor.ioc
@@ -25,8 +25,9 @@ Mcu.Pin12=PB4
 Mcu.Pin13=PB5
 Mcu.Pin14=PB6
 Mcu.Pin15=PB7
-Mcu.Pin16=VP_SYS_VS_Systick
-Mcu.Pin17=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin16=PB8
+Mcu.Pin17=VP_SYS_VS_Systick
+Mcu.Pin18=VP_TIM10_VS_ClockSourceINT
 Mcu.Pin2=PA3
 Mcu.Pin3=PB1
 Mcu.Pin4=PB2
@@ -35,7 +36,7 @@ Mcu.Pin6=PC7
 Mcu.Pin7=PC8
 Mcu.Pin8=PC9
 Mcu.Pin9=PA13
-Mcu.PinsNb=18
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
@@ -93,6 +94,11 @@ PB7.GPIO_Label=LED7
 PB7.GPIO_PuPd=GPIO_PULLDOWN
 PB7.Locked=true
 PB7.Signal=GPIO_Output
+PB8.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB8.GPIO_Label=LED8
+PB8.GPIO_PuPd=GPIO_PULLDOWN
+PB8.Locked=true
+PB8.Signal=GPIO_Output
 PC6.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC6.GPIO_Label=LED_SEL_1
 PC6.GPIO_PuPd=GPIO_PULLDOWN
