--- a/optielectronic_sensor.ioc
+++ b/optielectronic_sensor.ioc
@@ -1,9 +1,10 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_3
-ADC1.IPParameters=Rank-1\#ChannelRegularConversion,master,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag
+ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_3
+ADC1.ContinuousConvMode=ENABLE
+ADC1.IPParameters=Rank-2\#ChannelRegularConversion,master,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode
 ADC1.NbrOfConversionFlag=1
-ADC1.Rank-1\#ChannelRegularConversion=1
-ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.Rank-2\#ChannelRegularConversion=1
+ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.master=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -42,6 +43,7 @@ Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
 MxCube.Version=6.2.1
 MxDb.Version=DB.6.0.21
+NVIC.ADC_IRQn=true\:2\:0\:true\:false\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -58,63 +60,66 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA3.Signal=ADCx_IN3
+PA3.Locked=true
+PA3.Signal=SharedAnalog_PA3
 PB1.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB1.GPIO_Label=LED1
-PB1.GPIO_PuPd=GPIO_PULLDOWN
+PB1.GPIO_PuPd=GPIO_NOPULL
 PB1.Locked=true
 PB1.Signal=GPIO_Output
 PB2.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB2.GPIO_Label=LED2
-PB2.GPIO_PuPd=GPIO_PULLDOWN
+PB2.GPIO_PuPd=GPIO_NOPULL
 PB2.Locked=true
 PB2.Signal=GPIO_Output
 PB3.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB3.GPIO_Label=LED3
-PB3.GPIO_PuPd=GPIO_PULLDOWN
+PB3.GPIO_PuPd=GPIO_NOPULL
 PB3.Locked=true
 PB3.Signal=GPIO_Output
 PB4.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB4.GPIO_Label=LED4
-PB4.GPIO_PuPd=GPIO_PULLDOWN
+PB4.GPIO_PuPd=GPIO_NOPULL
 PB4.Locked=true
 PB4.Signal=GPIO_Output
 PB5.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB5.GPIO_Label=LED5
-PB5.GPIO_PuPd=GPIO_PULLDOWN
+PB5.GPIO_PuPd=GPIO_NOPULL
 PB5.Locked=true
 PB5.Signal=GPIO_Output
 PB6.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB6.GPIO_Label=LED6
-PB6.GPIO_PuPd=GPIO_PULLDOWN
+PB6.GPIO_PuPd=GPIO_NOPULL
 PB6.Locked=true
 PB6.Signal=GPIO_Output
 PB7.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB7.GPIO_Label=LED7
-PB7.GPIO_PuPd=GPIO_PULLDOWN
+PB7.GPIO_PuPd=GPIO_NOPULL
 PB7.Locked=true
 PB7.Signal=GPIO_Output
 PB8.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB8.GPIO_Label=LED8
-PB8.GPIO_PuPd=GPIO_PULLDOWN
+PB8.GPIO_PuPd=GPIO_NOPULL
 PB8.Locked=true
 PB8.Signal=GPIO_Output
 PC6.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC6.GPIO_Label=LED_SEL_1
-PC6.GPIO_PuPd=GPIO_PULLDOWN
+PC6.GPIO_PuPd=GPIO_NOPULL
 PC6.Locked=true
 PC6.Signal=GPIO_Output
 PC7.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC7.GPIO_Label=LED_SEL_2
-PC7.GPIO_PuPd=GPIO_PULLDOWN
+PC7.GPIO_PuPd=GPIO_NOPULL
 PC7.Locked=true
 PC7.Signal=GPIO_Output
-PC8.GPIOParameters=GPIO_Label
+PC8.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC8.GPIO_Label=LED_SEL_3
+PC8.GPIO_PuPd=GPIO_NOPULL
 PC8.Locked=true
 PC8.Signal=GPIO_Output
-PC9.GPIOParameters=GPIO_Label
+PC9.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC9.GPIO_Label=LED_SEL_4
+PC9.GPIO_PuPd=GPIO_NOPULL
 PC9.Locked=true
 PC9.Signal=GPIO_Output
 PH0\ -\ OSC_IN.Mode=HSE-External-Clock-Source
@@ -183,8 +188,9 @@ RCC.VCOInputFreq_Value=2000000
 RCC.VCOInputMFreq_Value=500000
 RCC.VCOOutputFreq_Value=200000000
 RCC.VcooutputI2S=48000000
-SH.ADCx_IN3.0=ADC1_IN3,IN3
-SH.ADCx_IN3.ConfNb=1
+SH.SharedAnalog_PA3.0=GPIO_Analog
+SH.SharedAnalog_PA3.1=ADC1_IN3,IN3
+SH.SharedAnalog_PA3.ConfNb=2
 TIM10.IPParameters=Prescaler,Period
 TIM10.Period=9999
 TIM10.Prescaler=9999
