--- a/optielectronic_sensor.ioc
+++ b/optielectronic_sensor.ioc
@@ -1,10 +1,9 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_3
-ADC1.ContinuousConvMode=ENABLE
-ADC1.IPParameters=Rank-2\#ChannelRegularConversion,master,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode
+ADC1.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_10
+ADC1.IPParameters=Rank-5\#ChannelRegularConversion,master,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,NbrOfConversionFlag
 ADC1.NbrOfConversionFlag=1
-ADC1.Rank-2\#ChannelRegularConversion=1
-ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.Rank-5\#ChannelRegularConversion=1
+ADC1.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.master=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -29,7 +28,7 @@ Mcu.Pin15=PB7
 Mcu.Pin16=PB8
 Mcu.Pin17=VP_SYS_VS_Systick
 Mcu.Pin18=VP_TIM10_VS_ClockSourceINT
-Mcu.Pin2=PA3
+Mcu.Pin2=PC0
 Mcu.Pin3=PB1
 Mcu.Pin4=PB2
 Mcu.Pin5=PC6
@@ -43,7 +42,7 @@ Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
 MxCube.Version=6.2.1
 MxDb.Version=DB.6.0.21
-NVIC.ADC_IRQn=true\:2\:0\:true\:false\:true\:true\:true
+NVIC.ADC_IRQn=true\:0\:0\:true\:false\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -60,8 +59,6 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA3.Locked=true
-PA3.Signal=SharedAnalog_PA3
 PB1.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB1.GPIO_Label=LED1
 PB1.GPIO_PuPd=GPIO_NOPULL
@@ -102,6 +99,8 @@ PB8.GPIO_Label=LED8
 PB8.GPIO_PuPd=GPIO_NOPULL
 PB8.Locked=true
 PB8.Signal=GPIO_Output
+PC0.Locked=true
+PC0.Signal=SharedAnalog_PC0
 PC6.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC6.GPIO_Label=LED_SEL_1
 PC6.GPIO_PuPd=GPIO_NOPULL
@@ -188,9 +187,9 @@ RCC.VCOInputFreq_Value=2000000
 RCC.VCOInputMFreq_Value=500000
 RCC.VCOOutputFreq_Value=200000000
 RCC.VcooutputI2S=48000000
-SH.SharedAnalog_PA3.0=GPIO_Analog
-SH.SharedAnalog_PA3.1=ADC1_IN3,IN3
-SH.SharedAnalog_PA3.ConfNb=2
+SH.SharedAnalog_PC0.0=GPIO_Analog
+SH.SharedAnalog_PC0.1=ADC1_IN10,IN10
+SH.SharedAnalog_PC0.ConfNb=2
 TIM10.IPParameters=Prescaler,Period
 TIM10.Period=9999
 TIM10.Prescaler=9999
