--- a/optielectronic_sensor.ioc
+++ b/optielectronic_sensor.ioc
@@ -14,7 +14,8 @@ Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
 Mcu.IP4=TIM10
-Mcu.IPNb=5
+Mcu.IP5=TIM11
+Mcu.IPNb=6
 Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0 - OSC_IN
@@ -28,6 +29,7 @@ Mcu.Pin15=PB7
 Mcu.Pin16=PB8
 Mcu.Pin17=VP_SYS_VS_Systick
 Mcu.Pin18=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin19=VP_TIM11_VS_ClockSourceINT
 Mcu.Pin2=PC0
 Mcu.Pin3=PB1
 Mcu.Pin4=PB2
@@ -36,7 +38,7 @@ Mcu.Pin6=PC7
 Mcu.Pin7=PC8
 Mcu.Pin8=PC9
 Mcu.Pin9=PA13
-Mcu.PinsNb=19
+Mcu.PinsNb=20
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
@@ -53,6 +55,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.TIM1_TRG_COM_TIM11_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA13.Mode=Serial_Wire
@@ -191,10 +194,15 @@ SH.SharedAnalog_PC0.0=GPIO_Analog
 SH.SharedAnalog_PC0.1=ADC1_IN10,IN10
 SH.SharedAnalog_PC0.ConfNb=2
 TIM10.IPParameters=Prescaler,Period
-TIM10.Period=9999
-TIM10.Prescaler=9999
+TIM10.Period=99
+TIM10.Prescaler=99
+TIM11.IPParameters=Prescaler,Period
+TIM11.Period=9999
+TIM11.Prescaler=9999
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM10_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM10_VS_ClockSourceINT.Signal=TIM10_VS_ClockSourceINT
+VP_TIM11_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM11_VS_ClockSourceINT.Signal=TIM11_VS_ClockSourceINT
 board=custom
